Update links in configuration and documentation to reflect project name change to FinChronicle

--- a/.github/workflows/link-checker-config.json
+++ b/.github/workflows/link-checker-config.json
@@ -4,7 +4,7 @@
       "pattern": "^http://localhost"
     },
     {
-      "pattern": "^https://kiren-labs.github.io/finance-tracker"
+      "pattern": "^https://kiren-labs.github.io/finchronicle"
     }
   ],
   "replacementPatterns": [],
